--- a/src/app/tweet/tweet.component.css
+++ b/src/app/tweet/tweet.component.css
@@ -16,6 +16,10 @@
   margin-right: 1rem;
 }
 
+.tweet-content, .tweet-header {
+  width: 100%;
+}
+
 .tweet-footer {
   display: flex;
   flex-direction: row;
