Test componentes arreglados

--- a/src/app/tweet/tweet.component.html
+++ b/src/app/tweet/tweet.component.html
@@ -1,4 +1,4 @@
-<div class="tweet">
+<div *ngIf="tweet" class="tweet">
   <img src="https://via.placeholder.com/48x48" alt="Tweet author pic">
   <div class="tweet-content">
     <div class="tweet-header">
